fix: fix overflow-x in speakers section

--- a/src/app/components/Speakers/Speakers.styles.module.scss
+++ b/src/app/components/Speakers/Speakers.styles.module.scss
@@ -1,5 +1,5 @@
 .speakersSection {
-  @apply relative py-6 lg:pb-44 lg:pt-12;
+  @apply relative overflow-x-hidden py-6 lg:pb-44 lg:pt-12;
   &::before {
     @apply bg-none lg:absolute lg:inset-0 lg:w-screen lg:bg-[url("/images/speakers\_lines.svg")] lg:bg-contain lg:bg-bottom lg:bg-no-repeat lg:content-["_"];
   }
